<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    android:background="?colorPrimary"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".fragments.HomeFragment"
    android:clickable="true"
    android:focusable="true"
    app:layout_insetEdge="bottom"
   >



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_peek_height"
        android:background="?colorPrimary"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/translated"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_sheet_peek_height"
            android:gravity="center"

            android:text="@string/points_txt"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </HorizontalScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/insert_translated"
            android:backgroundTint="@color/purple_light"
            android:src="@drawable/ic_wrap_text_24"
            android:scaleType="fitStart"
            />

        <ImageButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/do_translate"
            android:backgroundTint="@color/purple_light"
            android:src="@drawable/ic_translate"
            />
    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:animateLayoutChanges="true"
        android:background="?colorBackgroundFloating"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/english_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/field_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:autofillHints="name"
            android:background="@null"
            android:hint="@string/en"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/max_height_fields_txt"
            android:maxLength="@integer/max_length_words"
            android:minHeight="48dp"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toStartOf="@+id/speak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ru_word"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_one" />

        <EditText
            android:id="@+id/field_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@null"
            android:hint="@string/ru"
            android:inputType="textMultiLine"
            android:maxHeight="80dp"
            android:maxLength="@integer/max_length_words"
            android:minHeight="48dp"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toStartOf="@+id/speak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_two" />


        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/shape_border_left"
            android:hint="@string/none"
            android:inputType="textMultiLine"
            android:maxHeight="@dimen/max_height_fields_txt"
            android:maxLength="@integer/max_length_description"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="@dimen/size_5dp"
            android:scrollbarDefaultDelayBeforeFade="400"
            android:scrollbarFadeDuration="5000"
            android:scrollbarSize="6dp"
            android:scrollbars="vertical"
            android:textCursorDrawable="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="volume word"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:src="@drawable/ic_volume_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:backgroundTint="?colorSecondary"
            android:textColor="?colorOnPrimary"
            android:contentDescription="save word"
            android:text="@string/save"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_done"
            android:minWidth="50dp"
            android:minHeight="50dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>